finish FAQ section

--- a/public/index.html
+++ b/public/index.html
@@ -128,10 +128,10 @@
         </nav>
       </header>
 
-      <main class="lg:px-12 px-3 flex flex-col gap-28 pb-20">
+      <main class="lg:px-12 px-3 flex flex-col gap-24 pb-20">
         <!-- Heros Section -->
         <section>
-          <div class="grid grid-cols-6 min-h-96 mt-6">
+          <div class="grid grid-cols-6 min-h-80 mt-12">
             <div
               class="md:col-start-2 md:col-end-6 col-span-6 flex flex-col gap-12 items-center justify-center"
             >
@@ -193,7 +193,7 @@
                 >
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg border"
                   >View Pricing</a
                 >
               </div>
@@ -460,7 +460,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg border"
                 >
                   View All
                 </button>
@@ -717,7 +717,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg border"
                 >
                   View All
                 </button>
@@ -726,7 +726,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-5 gap-y-8">
               <!-- Card 1  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -775,7 +775,7 @@
                 </div>
                 <div>
                   <button
-                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200 border"
                   >
                     Get it Now
                   </button>
@@ -783,7 +783,7 @@
               </div>
               <!-- Card 2  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -832,7 +832,7 @@
                 </div>
                 <div>
                   <button
-                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200 border"
                   >
                     Get it Now
                   </button>
@@ -841,7 +841,7 @@
               <!-- Card 3  -->
 
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -889,7 +889,7 @@
                 </div>
                 <div>
                   <button
-                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200 border"
                   >
                     Get it Now
                   </button>
@@ -897,7 +897,7 @@
               </div>
               <!-- Card 4  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -946,7 +946,7 @@
                 </div>
                 <div>
                   <button
-                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200 border"
                   >
                     Get it Now
                   </button>
@@ -954,7 +954,7 @@
               </div>
               <!-- Card 5  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -1003,7 +1003,7 @@
                 </div>
                 <div>
                   <button
-                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200 border"
                   >
                     Get it Now
                   </button>
@@ -1011,7 +1011,7 @@
               </div>
               <!-- Card 6  -->
               <div
-                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300 border"
               >
                 <div class="flex gap-6 flex-col">
                   <div>
@@ -1060,7 +1060,7 @@
                 </div>
                 <div>
                   <button
-                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200 border"
                   >
                     Get it Now
                   </button>
@@ -1086,7 +1086,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg border"
                 >
                   View All
                 </button>
@@ -1114,7 +1114,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white border"
                     >
                       Read Full Story
                     </button>
@@ -1142,7 +1142,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white border"
                     >
                       Read Full Story
                     </button>
@@ -1170,7 +1170,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white border"
                     >
                       Read Full Story
                     </button>
@@ -1201,7 +1201,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white border"
                     >
                       Read Full Story
                     </button>
@@ -1636,8 +1636,8 @@
           <div
             class="bg-white p-6 xl:p-20 flex flex-col md:flex-row gap-10 rounded-xl"
           >
-            <div class="flex flex-col gap-5">
-              <div class="flex flex-col gap-2">
+            <div class="flex flex-col gap-5 md:gap-10 xl:gap-12">
+              <div class="flex flex-col gap-2 xl:gap-3">
                 <h2 class="text-3xl md:text-4xl xl:text-5xl font-semibold">
                   Frequently Asked Questions
                 </h2>
@@ -1673,17 +1673,13 @@
                       class="p-3 bg-lightCustomOrange rounded-lg cursor-pointer hover:bg-CustomOrange/30 transition-all duration-200"
                     >
                       <svg
-                        width="28"
-                        height="28"
-                        fill="none"
+                        height="19px"
+                        width="19px"
                         xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 384 512"
                       >
                         <path
-                          d="M7 20.116L14 14m6.117-6.116L14 14m0 0L7.884 7.884M14 14l6.117 6.116"
-                          stroke="#262626"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
+                          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                         />
                       </svg>
                     </div>
@@ -1863,6 +1859,8 @@
           </div>
         </section>
       </main>
+      <!-- Footer -->
+      <footer></footer>
     </div>
   </body>
 </html>
