--- a/public/Login-page.html
+++ b/public/Login-page.html
@@ -180,7 +180,7 @@
               </div>
             </div>
             <div
-              class="row-start-1 xl:col-start-5 bg-white xl:col-span-3 p-10 rounded-xl flex gap-10 flex-col"
+              class="row-start-1 xl:col-start-5 bg-white xl:col-span-3 p-5 md:p-10 rounded-xl flex gap-10 flex-col"
             >
               <div class="text-center flex flex-col gap-2">
                 <h2
@@ -277,7 +277,7 @@
                     </div>
                   </div>
                   <!-- OR Box -->
-                  <div class="flex items-center gap-4">
+                  <div class="flex items-center justify-center gap-4">
                     <svg
                       width="255"
                       height="2"
