--- a/public/index.html
+++ b/public/index.html
@@ -98,12 +98,12 @@
             <!-- login Btn -->
             <div class="flex gap-2 sm:gap-4">
               <a
-                href="#"
+                href="../public/Sign_up-page.html"
                 class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >Sign Up</a
               >
               <a
-                href="#"
+                href="../public/Login-page.html"
                 class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >Login</a
               >
