add contact section and contact page icons

--- a/public/Contact-page.html
+++ b/public/Contact-page.html
@@ -13,118 +13,228 @@
     />
   </head>
   <body class="bg-mainbgColor text-darkCustomGrey font-Be-Vietnam-Pro">
-    <!-- Header Section -->
-    <header class="flex flex-col gap-6">
-      <div
-        class="bg-CustomOrange flex justify-center py-3 md:py-4 px-2 rounded-md"
-      >
-        <a
-          href="#"
-          class="flex items-center justify-between text-xs md:text-base 3xl:text-xl text-white sm:gap-6"
-          >Free Courses 🌟 Sale Ends Soon, Get It Now
+    <div
+      class="px-2 py-6 md:py-4 md:px-4 3xl:max-w-screen-3xl mx-auto flex gap-32 flex-col"
+    >
+      <!-- Header Section -->
+      <header class="flex flex-col gap-6">
+        <div
+          class="bg-CustomOrange flex justify-center py-3 md:py-4 px-2 rounded-md"
+        >
+          <a
+            href="#"
+            class="flex items-center justify-between text-xs md:text-base 3xl:text-xl text-white sm:gap-6"
+            >Free Courses 🌟 Sale Ends Soon, Get It Now
 
-          <svg
-            width="21"
-            height="21"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M3.5 10.5a.75.75 0 01.75-.75h10.638L10.73 5.79a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H4.25a.75.75 0 01-.75-.75z"
-              fill="#fff"
-            />
-          </svg>
-        </a>
-      </div>
-      <nav class="flex justify-between items-center lg:px-12">
-        <!-- Navbar Logo & links  -->
-        <div class="flex items-center text-sm 3xl:text-lg gap-8">
-          <div>
             <svg
-              width="40"
-              height="41"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <rect y=".5" width="40" height="40" rx="6" fill="#FF9500" />
-              <path
-                d="M8.272 32.846l8.025-8.025h8.025v-8.025l8.024 8.025-8.024 8.025H8.272zM8.272 16.796l8.025 8.025v-8.025h8.025l8.024-8.024H16.297l-8.025 8.024z"
-                fill="#fff"
-              />
-            </svg>
-          </div>
-          <ul class="lg:flex hidden gap-2 md:gap-6">
-            <li>
-              <a
-                href="../public/index.html"
-                class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a
-                href="../public/Courses-page.html"
-                class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-                >Courses</a
-              >
-            </li>
-            <li>
-              <a
-                href="../public/About-page.html"
-                class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-                >About Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="../public/Pricing-page.html"
-                class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-                >Pricing</a
-              >
-            </li>
-            <li>
-              <a
-                href="../public/Contact-page.html"
-                class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="flex items-center gap-3 sm:gap-6">
-          <!-- login Btn -->
-          <div class="flex gap-2 sm:gap-4">
-            <a
-              href="../public/Sign_up-page.html"
-              class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-              >Sign Up</a
-            >
-            <a
-              href="../public/Login-page.html"
-              class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
-              >Login</a
-            >
-          </div>
-          <!-- Hambuger Btn -->
-          <div class="block lg:hidden hover:bg-lightCustomGrey/25 rounded-md">
-            <svg
-              width="34"
-              height="35"
+              width="21"
+              height="21"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
               <path
                 fill-rule="evenodd"
                 clip-rule="evenodd"
-                d="M4.25 10.063C4.25 9.476 4.726 9 5.313 9h23.375a1.063 1.063 0 010 2.125H5.313a1.063 1.063 0 01-1.063-1.063zm0 7.437c0-.587.476-1.063 1.063-1.063h23.375a1.063 1.063 0 010 2.125H5.313A1.063 1.063 0 014.25 17.5zm11.688 7.438c0-.587.475-1.063 1.062-1.063h11.688a1.063 1.063 0 010 2.125H17a1.063 1.063 0 01-1.063-1.063z"
-                fill="#262626"
+                d="M3.5 10.5a.75.75 0 01.75-.75h10.638L10.73 5.79a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H4.25a.75.75 0 01-.75-.75z"
+                fill="#fff"
               />
             </svg>
-          </div>
+          </a>
         </div>
-      </nav>
-    </header>
+        <nav class="flex justify-between items-center lg:px-12">
+          <!-- Navbar Logo & links  -->
+          <div class="flex items-center text-sm 3xl:text-lg gap-8">
+            <div>
+              <svg
+                width="40"
+                height="41"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect y=".5" width="40" height="40" rx="6" fill="#FF9500" />
+                <path
+                  d="M8.272 32.846l8.025-8.025h8.025v-8.025l8.024 8.025-8.024 8.025H8.272zM8.272 16.796l8.025 8.025v-8.025h8.025l8.024-8.024H16.297l-8.025 8.024z"
+                  fill="#fff"
+                />
+              </svg>
+            </div>
+            <ul class="lg:flex hidden gap-2 md:gap-6">
+              <li>
+                <a
+                  href="../public/index.html"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  href="../public/Courses-page.html"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  >Courses</a
+                >
+              </li>
+              <li>
+                <a
+                  href="../public/About-page.html"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  >About Us</a
+                >
+              </li>
+              <li>
+                <a
+                  href="../public/Pricing-page.html"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  >Pricing</a
+                >
+              </li>
+              <li>
+                <a
+                  href="../public/Contact-page.html"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="flex items-center gap-3 sm:gap-6">
+            <!-- login Btn -->
+            <div class="flex gap-2 sm:gap-4">
+              <a
+                href="../public/Sign_up-page.html"
+                class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                >Sign Up</a
+              >
+              <a
+                href="../public/Login-page.html"
+                class="px-5 py-3 text-sm md:text-base 2xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                >Login</a
+              >
+            </div>
+            <!-- Hambuger Btn -->
+            <div class="block lg:hidden hover:bg-lightCustomGrey/25 rounded-md">
+              <svg
+                width="34"
+                height="35"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M4.25 10.063C4.25 9.476 4.726 9 5.313 9h23.375a1.063 1.063 0 010 2.125H5.313a1.063 1.063 0 01-1.063-1.063zm0 7.437c0-.587.476-1.063 1.063-1.063h23.375a1.063 1.063 0 010 2.125H5.313A1.063 1.063 0 014.25 17.5zm11.688 7.438c0-.587.475-1.063 1.062-1.063h11.688a1.063 1.063 0 010 2.125H17a1.063 1.063 0 01-1.063-1.063z"
+                  fill="#262626"
+                />
+              </svg>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <main class="lg:px-12 px-3 flex flex-col gap-24 pb-20">
+        <section>
+          <div class="grid grid-cols-2 items-center gap-20 pb-10">
+            <div>
+              <h1 class="text-4xl font-semibold">Contact Us</h1>
+            </div>
+            <div>
+              <p>
+                Welcome to SkillBridge's Pricing Plan page, where we offer two
+                comprehensive options to cater to your needs: Free and Pro. We
+                believe in providing flexible and affordable pricing options for
+                our services. Whether you're an individual looking to enhance
+                your skills or a business seeking professional development
+                solutions, we have a plan that suits you. Explore our pricing
+                options below and choose the one that best fits your
+                requirements.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section>
+          <div class="grid grid-cols-3 bg-white rounded-xl">
+            <div class="col-span-2 p-16">
+              <form action="" class="grid grid-cols-2 gap-6">
+                <div class="flex flex-col gap-3">
+                  <label for="First Name" class="font-medium"
+                    >First Name
+                  </label>
+                  <input
+                    type="text"
+                    name="First Name"
+                    id="First Name"
+                    class="bg-customWhite/20 p-5 rounded-md border outline-none text-gray-600 placeholder:text-gray-700/80"
+                    placeholder="Enter First Name"
+                  />
+                </div>
+                <div class="flex flex-col gap-3">
+                  <label for="Last Name" class="font-medium">Last Name </label>
+                  <input
+                    type="text"
+                    name="Last Name"
+                    id="Last Name"
+                    class="bg-customWhite/20 p-5 rounded-md border outline-none text-gray-600 placeholder:text-gray-700/80"
+                    placeholder="Enter Last Name"
+                  />
+                </div>
+                <div class="flex flex-col gap-3">
+                  <label for="Last Name" class="font-medium">Email </label>
+                  <input
+                    type="email"
+                    name="Email"
+                    id="Email"
+                    class="bg-customWhite/20 p-5 rounded-md border outline-none text-gray-600 placeholder:text-gray-700/80"
+                    placeholder="Enter your Email"
+                  />
+                </div>
+                <div class="flex flex-col gap-3">
+                  <label for="Last Name" class="font-medium">Phone </label>
+                  <input
+                    type="number"
+                    name="Number"
+                    id="Number"
+                    class="bg-customWhite/20 p-5 rounded-md border outline-none text-gray-600 placeholder:text-gray-700/80"
+                    placeholder="Enter your Number"
+                  />
+                </div>
+                <div class="flex flex-col gap-3 col-span-2">
+                  <label for="Last Name" class="font-medium">Subject </label>
+                  <input
+                    type="text"
+                    name="Subject"
+                    id="Subject"
+                    class="bg-customWhite/20 p-5 rounded-md border outline-none text-gray-600 placeholder:text-gray-700/80"
+                    placeholder="Enter your Subject"
+                  />
+                </div>
+                <div class="flex flex-col gap-3 col-span-2 py-10">
+                  <label for="Last Name" class="font-medium">Massage </label>
+                  <textarea
+                    name="Massage"
+                    id="Massage"
+                    rows="5"
+                    placeholder="Enter your Massage here..."
+                    class="bg-customWhite/20 p-5 rounded-md border outline-none text-gray-600 placeholder:text-gray-700/80 resize-none"
+                  ></textarea>
+                </div>
+                <div class="flex justify-center col-span-2">
+                  <a
+                    href="#"
+                    class="text-sm bg-CustomOrange px-5 py-3 text-white rounded-md"
+                    >Send Your Massage</a
+                  >
+                </div>
+              </form>
+            </div>
+            <div class="col-span-1 p-16">
+              <div class="p-8 flex flex-col gap-3">
+                <div></div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
