fix padding in login page

--- a/public/Login-page.html
+++ b/public/Login-page.html
@@ -132,7 +132,7 @@
       </header>
       <main class="lg:px-12 px-3 flex flex-col gap-24 pb-20">
         <section>
-          <div class="grid grid-cols-1 xl:grid-cols-7 gap-20 lg:px-12">
+          <div class="grid grid-cols-1 xl:grid-cols-7 gap-20">
             <div class="xl:flex flex-col grid gap-16 xl:col-span-4">
               <div class="flex flex-col gap-2">
                 <h2 class="text-custom-28 md:text-3xl 2xl:text-4xl font-medium">
