--- a/public/About-page.html
+++ b/public/About-page.html
@@ -133,12 +133,14 @@
       <main class="lg:px-12 px-3 flex flex-col gap-24 pb-20">
         <!-- heros Section -->
         <section>
-          <div class="grid grid-cols-2 items-center gap-20 pb-10">
+          <div class="grid md:grid-cols-2 items-center gap-20 pb-10">
             <div class="text-custom-28 md:text-4xl xl:text-5xl font-semibold">
               <h1>About Skillbridge</h1>
             </div>
             <div>
-              <p class="text-sm md:text-base xl:text-lg">
+              <p
+                class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+              >
                 Welcome to our platform, where we are passionate about
                 empowering individuals to master the world of design and
                 development. We offer a wide range of online courses designed to
@@ -148,6 +150,153 @@
             </div>
           </div>
         </section>
+        <!-- Achievements Section -->
+        <section>
+          <div class="flex flex-col gap-16">
+            <div class="grid grid-cols-5">
+              <div class="col-span-5 flex flex-col gap-2">
+                <h1 class="font-medium text-3xl">Achievements</h1>
+                <p
+                  class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                >
+                  Our commitment to excellence has led us to achieve significant
+                  milestones along our journey. Here are some of our notable
+                  achievements
+                </p>
+              </div>
+            </div>
+            <div class="flex flex-col gap-5">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="28"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M4.672 20.667L5 21.992c.414 1.722 1.32 2.606 3.122 2.606h11.756c1.813 0 2.708-.862 3.133-2.606l.328-1.325H4.672zm-.36-1.513H23.71l2.052-8.502-.895-.519-5.032 3.71c-.372.265-.623.166-.83-.133l-4.738-7.243-.524-.022-4.78 7.299c-.186.287-.405.375-.776.11L3.253 10.21l-1.048.276 2.107 8.668zM2.609 12.86c1.44 0 2.598-1.181 2.598-2.65 0-1.435-1.157-2.628-2.598-2.628C1.168 7.582 0 8.764 0 10.21c0 1.469 1.179 2.65 2.609 2.65zm11.396-4.593c1.43 0 2.598-1.182 2.598-2.64C16.604 4.194 15.436 3 14.006 3a2.615 2.615 0 00-2.609 2.628c0 1.457 1.168 2.639 2.61 2.639zm11.386 4.593c1.43 0 2.609-1.181 2.609-2.65 0-1.446-1.168-2.628-2.609-2.628-1.43 0-2.598 1.193-2.598 2.628 0 1.469 1.168 2.65 2.598 2.65z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Trusted by Thousands
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      We have successfully served thousands of students, helping
+                      them unlock their potential and achieve their career
+                      goals.
+                    </p>
+                  </div>
+                </div>
+                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="28"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M14.148 27.438a7.44 7.44 0 007.453-7.442 7.442 7.442 0 00-7.453-7.453 7.44 7.44 0 00-7.441 7.453 7.437 7.437 0 007.441 7.442zm-2.121-3.61c-.445.328-.914-.012-.738-.527l.843-2.52-2.156-1.535c-.41-.305-.281-.879.281-.879l2.649.024.808-2.532c.164-.515.727-.515.891 0l.809 2.532 2.648-.024c.563 0 .68.586.281.867l-2.156 1.547.844 2.52c.176.515-.293.855-.738.527L14.16 22.27l-2.133 1.558zm-5.016-9.41a9.122 9.122 0 014.547-3.094L6.25 1.785l-3.082 4.7c-.211.304-.223.644-.036.949l3.88 6.984zm4.512-7.09h5.262L20.359 1H7.949l3.574 6.328zm5.227 3.996a9.071 9.071 0 014.546 3.094l3.891-6.984a.852.852 0 00-.047-.95l-3.082-4.699-5.308 9.54z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Award-Winning Courses
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      Our courses have received recognition and accolades in the
+                      industry for their quality, depth of content, and
+                      effective teaching methodologies.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="28"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <g clip-path="url(#prefix__clip0_148_2990)">
+                        <path
+                          d="M10.54 20.968c3.968-1.092 5.666-4.228 4.547-8.457l-1.505-5.748c-.41-1.544-1.409-2.102-2.946-1.692l-7.977 2.16C1.114 7.658.542 8.643.953 10.22l1.497 5.74c1.103 4.22 4.121 6.092 8.09 5.008zm-.757-2.94c-1.683.444-3.316-.139-4.178-1.535-.169-.254-.024-.509.298-.484 1.07.09 2.342-.099 3.26-.353.901-.238 2.077-.715 2.97-1.347.266-.197.531-.057.515.28-.056 1.642-1.175 2.964-2.865 3.44zm-4.057-5.394c-.604.172-.684.583-.942.624-.12.025-.265-.115-.338-.353-.193-.698.242-1.445.934-1.618.7-.172 1.417.247 1.594.92.072.246.008.435-.121.484-.298.107-.58-.205-1.127-.057zm4.91-1.355c-.604.18-.684.583-.942.616-.12.025-.265-.115-.338-.345-.193-.69.242-1.445.934-1.617a1.298 1.298 0 011.594.92c.072.254.008.434-.121.484-.29.106-.58-.214-1.127-.058zm15.518-1.921l-7.968-2.176c-1.417-.386-2.415.04-2.825 1.322l-.097.353.886 3.367c.885 3.358.16 6.199-1.9 8.038.789 1.33 2.19 2.324 4.04 2.825 3.953 1.076 6.955-.797 8.066-5.017l1.52-5.732c.403-1.551-.176-2.561-1.722-2.98zm-8.113 4.976c-.555-.14-.885-.715-.733-1.298.153-.566.717-.903 1.272-.747.556.156.886.74.74 1.306a1.032 1.032 0 01-1.279.739zm4.725 1.289c-.548-.148-.878-.73-.725-1.306a1.016 1.016 0 011.264-.739c.564.14.885.723.74 1.298a1.037 1.037 0 01-1.28.747zm-3.389 3.153c-.837-.238-1.642-.246-2.672-.016-.322.073-.515-.198-.346-.468.692-1.109 2.092-1.569 3.453-1.183 1.408.361 2.366 1.462 2.414 2.775.017.329-.281.469-.523.247-.796-.74-1.48-1.133-2.326-1.355z"
+                          fill="#FF9500"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="prefix__clip0_148_2990">
+                          <path fill="#fff" d="M0 0h28v28H0z" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Positive Student Feedback
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      We take pride in the positive feedback we receive from our
+                      students, who appreciate the practicality and relevance of
+                      our course materials.
+                    </p>
+                  </div>
+                </div>
+                <div class="bg-white p-10 flex flex-col items-start gap-8">
+                  <div
+                    class="bg-lightCustomOrange inline-block p-3 rounded-md border-2 border-CustomOrange/20"
+                  >
+                    <svg
+                      width="28"
+                      height="28"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M13.586 25.66c.187 0 .48-.07.773-.223 6.668-3.492 8.813-5.238 8.813-9.445V7.156c0-1.207-.516-1.593-1.5-2.004-1.371-.562-5.754-2.156-7.113-2.625a3.081 3.081 0 00-.973-.164c-.328 0-.656.07-.961.164-1.371.446-5.754 2.075-7.125 2.625-.973.399-1.5.797-1.5 2.004v8.836c0 4.207 2.262 5.754 8.813 9.445.304.165.585.223.773.223zM8.3 14.398c0-.14.07-.316.199-.468l6.621-8.309c.504-.633 1.348-.21 1.043.574l-2.18 5.86h4.09c.317 0 .551.222.551.539 0 .14-.07.316-.2.469l-6.62 8.308c-.504.633-1.336.211-1.043-.562l2.191-5.872H8.852a.533.533 0 01-.551-.539z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-3">
+                    <h3 class="text-lg xl:text-xl 3xl:text-2xl font-medium">
+                      Industry Partnerships
+                    </h3>
+                    <p
+                      class="text-sm md:text-base xl:text-lg text-lightCustomGrey/90"
+                    >
+                      We have established strong partnerships with industry
+                      leaders, enabling us to provide our students with access
+                      to the latest tools and technologies.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Our Goals -->
       </main>
     </div>
   </body>
